remove constructor calls for alice.tuprolog.{Int, Long, Double, Float}
(replaced by factories)